--- a/package.json
+++ b/package.json
@@ -24,7 +24,10 @@
     "core-js": "^2.5.4",
     "ionicons": "^5.0.0",
     "jquery": "^3.4.1",
+    "ng-sweet-alert": "^1.0.11",
     "rxjs": "~6.3.3",
+    "sweetalert": "^2.1.2",
+    "sweetalert2": "^9.7.2",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
   },
