--- a/angular.json
+++ b/angular.json
@@ -28,7 +28,8 @@
             ],
             "styles": [
               "src/styles.scss",
-              "node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "src/assets/CSS/bootstrap.min.css",
+              "src/assets/CSS/dashboard.css",
               "node_modules/sweetalert2/dist/sweetalert2.min.css"
             ],
             "scripts": [
