--- a/package.json
+++ b/package.json
@@ -20,14 +20,41 @@
     "@angular/platform-browser-dynamic": "~7.1.0",
     "@angular/router": "~7.1.0",
     "@ionic/angular": "^5.0.0",
+    "@popperjs/core": "^2.0.6",
+    "@ttskch/select2-bootstrap4-theme": "^1.3.2",
+    "@types/datatables.net": "^1.10.18",
+    "@types/datatables.net-buttons": "^1.4.3",
+    "@types/jquery": "^3.3.33",
+    "angular-datatables": "^8.0.0",
     "bootstrap": "^4.4.1",
+    "chart.js": "^2.9.3",
     "core-js": "^2.5.4",
+    "datatables.net": "^1.10.20",
+    "datatables.net-autofill-bs4": "^2.3.4",
+    "datatables.net-bs4": "^1.10.20",
+    "datatables.net-buttons": "^1.6.1",
+    "datatables.net-buttons-bs4": "^1.6.1",
+    "datatables.net-buttons-dt": "^1.6.1",
+    "datatables.net-colreorder-bs4": "^1.5.2",
+    "datatables.net-dt": "^1.10.20",
+    "datatables.net-responsive": "^2.2.3",
+    "datatables.net-responsive-dt": "^2.2.3",
+    "datatables.net-searchpanes-bs4": "^1.0.1",
+    "datatables.net-select-bs4": "^1.3.1",
     "ionicons": "^5.0.0",
     "jquery": "^3.4.1",
+    "jquery-ui": "^1.12.1",
+    "jszip": "^3.2.2",
     "ng-sweet-alert": "^1.0.11",
+    "ng2-charts": "^2.3.0",
+    "pdfmake": "^0.1.64",
+    "popper": "^1.0.1",
+    "popper.js": "^1.16.1",
     "rxjs": "~6.3.3",
+    "select2": "^4.0.13",
     "sweetalert": "^2.1.2",
     "sweetalert2": "^9.7.2",
+    "tokenize2": "^1.3.1",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
   },
